# TinySync

./: .gitignore  CMakeLists.txt  ComandInitialization.h  CommandInitialization.h  FileSync.sln  README.md  TinySync.cpp
ADBManager/: ADBManager.cpp  ADBManager.h  FileData.h  IADBManager.h
CommandConstructor/: CommandConstructor.cpp  CommandConstructor.h  ICommandConstructor.h
CommandDecoder/: CommandDecoder.cpp  CommandDecoder.h  CommandType.cpp  CommandType.h
CommandExecutor/: CommandExecutor.cpp  CommandExecutor.h  ICommandExecutor.h
Commands/: ArgumentCount.h  CommandAddOrigin.cpp  CommandAddOrigin.h  CommandAddTarget.cpp  CommandAddTarget.h  CommandBalance.cpp  CommandBalance.h  CommandBase.cpp  CommandBase.h  CommandCleanTarget.cpp  CommandCleanTarget.h  CommandHelp.cpp  CommandHelp.h  CommandSync.cpp  CommandSync.h  CommandSyncUpdate.cpp  CommandSyncUpdate.h  CommandVersion.cpp  CommandVersion.h  ICommand.h  Priority.h
Controller/: Controller.cpp  Controller.h  IController.h  IGetCommands.h  IGetOutputManager.h  IGetSyncManager.h
DataTypes/: CArg.h  CArgument.h  CConstructor.h  CFullName.h  CName.h  CommandConstructorType.h  DataTypeBase.cpp  DataTypeBase.h  DataTypes.h
FileSync/: FileSync.cpp  FileSync.vcxproj
FileSync/CommandDecoder/: Command.h  CommandDecoder.cpp  CommandDecoder.h  CommandDecoderInterface.h
FileSync/Controller/: Controller.cpp  Controller.h  ControllerInterface.h
FileSync/InputManager/: InputManager.cpp  InputManager.h  InputManagerInterface.h
FileSync/OutputManager/: OutputManager.cpp  OutputManager.h  OutputManagerInterface.cpp  OutputManagerInterface.h
FileSync/SyncManager/: SyncInterface.h
InputManager/: IInputManager.h  InputManager.cpp  InputManager.h
InputManager/CommandDecoder/: CommandDecoder.cpp  CommandDecoder.h  CommandType.h  ICommandDecoder.h
Logger/: GetLogger.h  ILogger.h  Logger.cpp  Logger.h
OutputManager/: IOutputManager.h  OutputManager.cpp  OutputManager.h
SyncManager/: ISync.h  SyncManager.cpp  SyncManager.h
TinySync/: CMakeLists.txt  FileSync.vcxproj.filters  TinySync.cpp  TinySync.vcxproj
TinySync/CommandDecoder/: CommandDecoder.h  CommandDecoderInterface.h  ICommandDecoder.h
TinySync/Controller/: Controller.cpp  Controller.h  ControllerInterface.h  IController.h
TinySync/InputManager/: IInputManager.h  InputManager.cpp  InputManager.h
TinySync/InputManager/CommandDecoder/: Command.h  CommandDecoder.cpp  CommandDecoder.h
TinySync/Logger/: GetLogger.cpp
TinySync/OutputManager/: IOutputManager.h  OutputManager.cpp  OutputManager.h  OutputManagerInterface.h
TinySync/SyncManager/: Filter.h  ISync.h  SyncInterface.h  SyncManager.cpp  SyncManager.h
